# grundschutz-mcp

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  RELEASING.md  SECURITY.md  VERSIONING.md  pyproject.toml
.claude/: settings.json
.claude/agents/: architecture-guardian.md  coder.md  planner.md  security-reviewer.md  test-writer.md
.claude/commands/: ship-check.md  verify-oscal.md
.claude/hooks/: deny_dangerous.py  enforce_layering.py
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  release.yml  upstream-watch.yml
docs/adr/: 0001-record-architecture-decisions.md  0002-runtime-load-pinned-bsi-data.md  0003-anti-corruption-layer-for-oscal.md  0004-internal-model-is-a-projection.md  0005-keep-bsi-texts-in-german.md  0006-license-boundary-apache-ccbysa.md  0007-python-mcp-sdk-stack.md  0008-model-fields-from-verified-bsi-data.md  0009-resolve-oscal-parameter-placeholders.md  0010-versioning-semver-decoupled-from-bsi-data.md  README.md  template.md
docs/superpowers/specs/: 2026-06-07-additional-query-tools-design.md
src/grundschutz_mcp/: __init__.py  __main__.py  config.py  loader.py  mapper.py  model.py  server.py
tests/: conftest.py  test_loader.py  test_mapper.py  test_schema.py  test_server.py
